-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: None
-
Component/s: hotspot
-
b18
-
aarch64
-
os_x
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8295120 | 17.0.6 | Goetz Lindenmaier | P4 | Resolved | Fixed | b01 |
| JDK-8295200 | 11.0.18 | Goetz Lindenmaier | P4 | Resolved | Fixed | b01 |
The zero variant cannot currently be build on Mac OS X (I tested only aarch64): It fails because the `os::current_thread_enable_wx` method is not implemented for the bsd_zero target, but the usage of this method is only enabled with `MACOS_AARCH64_ONLY` which makes the usages appear in zero variants on Mac OS X aarch64.
- backported by
-
JDK-8295120 Zero does not build on Mac OS X due to missing os::current_thread_enable_wx implementation
-
- Resolved
-
-
JDK-8295200 Zero does not build on Mac OS X due to missing os::current_thread_enable_wx implementation
-
- Resolved
-
- links to
-
Commit
openjdk/jdk11u-dev/9ffc4b3b
-
Commit
openjdk/jdk17u-dev/d7a3a9e8
-
Commit
openjdk/jdk/bc12e861
-
Review
openjdk/jdk11u-dev/1375
-
Review
openjdk/jdk17u-dev/742
-
Review
openjdk/jdk/8200
(3 links to)