8284752: Zero does not build on Mac OS X due to missing os::current_thread_enable_wx implementation

Backport-of: bc12e8616d1a28ab8504bcb6edc06783748cc797